log
Fri 29 Mar 2024 02:17:50 PM UTC: 
 tests:  0|6
total_score: 0/70
93e1a79
Fri 29 Mar 2024 02:19:18 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f8a87ab
Fri 29 Mar 2024 02:19:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c85409e
Fri 29 Mar 2024 02:20:23 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
ad901c3
Fri 29 Mar 2024 02:22:24 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:44:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   44 |   if (list->next != NULL){
      |           ^~
list.c:45:25: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     list->current = list->next;
      |                         ^~
list.c:46:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     return list->next;
      |                ^~
Compilation failed
2603800
Fri 29 Mar 2024 02:22:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:44:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   44 |   if ((list->next) != NULL){
      |            ^~
list.c:45:25: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     list->current = list->next;
      |                         ^~
list.c:46:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     return list->next;
      |                ^~
Compilation failed
5c6657a
Fri 29 Mar 2024 02:24:03 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
83f91f7
Fri 29 Mar 2024 02:25:52 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
012e5a1
Fri 29 Mar 2024 02:27:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0677ba4
Fri 29 Mar 2024 02:28:20 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8a8d00e
Fri 29 Mar 2024 02:28:52 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
903d53b
Fri 29 Mar 2024 02:30:51 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 15/70
923cfbf
Fri 29 Mar 2024 02:31:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
fe5abc8
Fri 29 Mar 2024 02:33:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f3096da
Fri 29 Mar 2024 02:34:01 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6cf28d8
Fri 29 Mar 2024 02:35:05 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b904f8e
Fri 29 Mar 2024 02:36:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0d389d7
Fri 29 Mar 2024 02:37:48 PM UTC: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
b8b39c1
Fri 29 Mar 2024 02:39:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b98a3d0
Fri 29 Mar 2024 02:42:32 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
bc99264
Fri 29 Mar 2024 02:42:49 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
d8a261d
Fri 29 Mar 2024 02:43:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
aaf8e6a
Fri 29 Mar 2024 02:43:49 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
d713de9
Fri 29 Mar 2024 02:47:55 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
8626efa
Fri 29 Mar 2024 02:49:19 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
7f0e8bb
Fri 29 Mar 2024 02:49:49 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
6bcd32e
Fri 29 Mar 2024 02:51:19 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:66:9: error: ‘List’ {aka ‘struct List’} has no member named ‘Current’; did you mean ‘current’?
   66 |   list->Current = list->current->prev;
      |         ^~~~~~~
      |         current
Compilation failed
2256db0
Fri 29 Mar 2024 02:51:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b91f527
